--- a/index.html
+++ b/index.html
@@ -5,30 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Website Bisnis</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+    <style type="text/tailwindcss">
+      .swiper {
+        width: 100%;
+        height: fit-content;
+      }
+      .swiper-slide img {
+        width: 100%;
+      }
+      .swiper .swiper-pagination,
+      .swiper .swiper-button-prev,
+      .swiper .swiper-button-next {
+        color: gold;
+      }
+      .swiper .swiper-pagination-bullet-active {
+        background-color: gold;
+      }
+    </style>
+    <title>Website Determinix</title>
   </head>
-  <body>
-    <div class="container max-w-5xl mx-auto">
-      <img src="image/space169.png" alt="" />
+  <body class="bg-slate-100">
+    <div class="container max-w-5xl mx-auto relative">
+      <!-- Determinix start -->
+      <div class="swiper relative">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="image/space169.png" alt="" />
+            <h1 class="absolute text-[30px] text-center font-bold text-yellow-500 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 md:text-6xl">Determinix Space</h1>
+          </div>
+          <div class="swiper-slide">
+            <img src="image/spacee169.png" alt="" />
+            <h1 class="absolute text-[30px] text-center font-bold text-yellow-500 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 md:text-6xl">Determinix Space</h1>
+          </div>
+          <div class="swiper-slide">
+            <img src="image/spaceee169.png" alt="" />
+            <h1 class="absolute text-[30px] text-center font-bold text-yellow-500 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 md:text-6xl">Determinix Space</h1>
+          </div>
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+      <!-- Determinix end -->
 
       <!-- why start -->
-      <h3 class="text-center mt-3 font-bold text-3xl text-slate-800">Mengapa Determinix Space?</h3>
-      <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sapiente tenetur voluptate, odit incidunt cumque nam quisquam recusandae aliquid doloremque.</p>
+      <h3 class="text-center mt-5 font-bold text-3xl text-slate-800">Mengapa Determinix Space?</h3>
+      <p class="text-center">Karena kami menyediakan jasa mengelilingi luar angkasa satu satu nya dibumi</p>
       <div class="p-5 text-center md:columns-3">
         <div class="bg-slate-200 p-5 mb-3">
           <img src="image/icon/check.png" class="w-16 mx-auto my-5" />
-          <h3 class="font-bold text-lg">50% Safe 😊</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ab blanditiis sit necessitatibus et? Sapiente mollitia soluta maxime quisquam dolor!</p>
+          <h3 class="font-bold text-lg">Safe up to 75%😊</h3>
+          <p>Keselamatan anda kami jamin</p>
+          <p>(sesuai dengan isi dompet anda)</p>
         </div>
         <div class="bg-slate-200 p-5 mb-3">
           <img src="image/icon/check.png" class="w-16 mx-auto my-5" />
-          <h3 class="font-bold text-lg">50% Safe 😊</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ab blanditiis sit necessitatibus et? Sapiente mollitia soluta maxime quisquam dolor!</p>
+          <h3 class="font-bold text-lg">Pekerja berkualitas</h3>
+          <p>Seluruh pekerja ahli dibidangnya masing-masing</p>
         </div>
         <div class="bg-slate-200 p-5 mb-3">
           <img src="image/icon/check.png" class="w-16 mx-auto my-5" />
-          <h3 class="font-bold text-lg">50% Safe 😊</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ab blanditiis sit necessitatibus et? Sapiente mollitia soluta maxime quisquam dolor!</p>
+          <h3 class="font-bold text-lg">Bye earth</h3>
+          <p>Dijamin mendarat diplanet lain</p>
+          <p><span class="text-red-500">*</span>Tidak ada jaminan balik ke bumi😊</p>
         </div>
       </div>
       <!-- why end -->
@@ -37,20 +75,21 @@
       <h3 class="text-center mt-3 font-bold text-3xl text-slate-800 mb-3">Project Determinix Space</h3>
       <div class="columns-2 p-5 md:columns-4 md:py-0">
         <div>
-          <img src="image/space43.png" class="" />
-          <h3 class="text-center">Project 1</h3>
+          <img src="image/space43.png" />
+          <h3 class="text-center">Project (Secret)</h3>
         </div>
         <div>
-          <img src="image/space43.png" class="" />
-          <h3 class="text-center">Project 1</h3>
+          <img src="image/spacee43.png" />
+          <h3 class="text-center">Project (Secret)</h3>
         </div>
         <div>
-          <img src="image/space43.png" class="" />
-          <h3 class="text-center">Project 1</h3>
+          <img src="image/spaceee43.png" />
+          <h3 class="text-center">Project (Secret)</h3>
         </div>
+
         <div>
-          <img src="image/space43.png" class="" />
-          <h3 class="text-center">Project 1</h3>
+          <img src="image/spacee3.png" />
+          <h3 class="text-center">Project (Secret)</h3>
         </div>
       </div>
       <!-- project end -->
@@ -68,7 +107,7 @@
           </ul>
           <div class="mx-center">
             <h1 class="mb-2 text-center text-xl"><span class="line-through">Rp 1.112.000.000</span><span class="text-red-500 ml-2 font-bold">Free</span></h1>
-            <a href="" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center">Buy via WA</a>
+            <a href="https://wa.me/0895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
           </div>
         </div>
 
@@ -82,7 +121,7 @@
           <div class="mx-center">
             <h1 class="text-center text-xl"><span class="line-through">Rp 3.500.000.000</span></h1>
             <h2 class="mb-2 text-red-500 font-bold text-xl text-center">Rp 3.500.000.000</h2>
-            <a href="" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center">Buy via WA</a>
+            <a href="https://wa.me/0895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
           </div>
         </div>
 
@@ -96,7 +135,7 @@
           <div class="mx-center">
             <h1 class="text-center text-xl"><span class="line-through">Rp 4.200.000.000</span></h1>
             <h2 class="mb-2 text-red-500 font-bold text-xl text-center">Rp 4.500.000.000</h2>
-            <a href="" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center">Buy via WA</a>
+            <a href="https://wa.me/0895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
           </div>
         </div>
       </div>
@@ -112,7 +151,7 @@
           </ul>
           <div class="mx-center">
             <h1 class="mb-2 text-center text-xl"><span class="text-red-500 ml-2 font-bold">Rp 745.500.000.000.000</span></h1>
-            <a href="" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center">Buy via WA</a>
+            <a href="https://wa.me/0895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
           </div>
         </div>
 
@@ -126,16 +165,26 @@
           </ul>
           <div class="mx-center">
             <h1 class="mb-2 text-center text-xl"><span class="text-red-500 ml-2 font-bold">Rp 10.585.500.000.000.000</span></h1>
-            <a href="" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center">Buy via WA</a>
+            <a href="https://wa.me/0895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
           </div>
         </div>
       </div>
       <!-- price end -->
     </div>
     <!-- footer start -->
-    <div class="bg-slate-600 mt-7">
+    <div class="bg-yellow-500 mt-7">
       <h1 class="text-center text-slate-200 py-1">Created by difhaels 2k22</h1>
     </div>
     <!-- footer end -->
+
+    <!-- button wa start -->
+    <div class="fixed bottom-5 right-0 z-40 bg-green-500 rounded-full flex hover:bg-green-300 md:right-48" style="width: 50px; height: 50px">
+      <a href="https://wa.me/0895337305533" target="_blank" class="m-auto">
+        <img src="image/icon/wa.png" alt="wa" class="w-7" />
+      </a>
+    </div>
+    <!-- button wa end -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
