--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </ul>
           <div class="mx-center">
             <h1 class="mb-2 text-center text-xl"><span class="line-through">Rp 1.112.000.000</span><span class="text-red-500 ml-2 font-bold">Free</span></h1>
-            <a href="https://wa.me/0895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
+            <a href="https://wa.me/+62895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
           </div>
         </div>
 
@@ -121,7 +121,7 @@
           <div class="mx-center">
             <h1 class="text-center text-xl"><span class="line-through">Rp 3.500.000.000</span></h1>
             <h2 class="mb-2 text-red-500 font-bold text-xl text-center">Rp 3.500.000.000</h2>
-            <a href="https://wa.me/0895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
+            <a href="https://wa.me/+62895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
           </div>
         </div>
 
@@ -135,7 +135,7 @@
           <div class="mx-center">
             <h1 class="text-center text-xl"><span class="line-through">Rp 4.200.000.000</span></h1>
             <h2 class="mb-2 text-red-500 font-bold text-xl text-center">Rp 4.500.000.000</h2>
-            <a href="https://wa.me/0895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
+            <a href="https://wa.me/+62895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
           </div>
         </div>
       </div>
@@ -151,7 +151,7 @@
           </ul>
           <div class="mx-center">
             <h1 class="mb-2 text-center text-xl"><span class="text-red-500 ml-2 font-bold">Rp 745.500.000.000.000</span></h1>
-            <a href="https://wa.me/0895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
+            <a href="https://wa.me/+62895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
           </div>
         </div>
 
@@ -165,7 +165,7 @@
           </ul>
           <div class="mx-center">
             <h1 class="mb-2 text-center text-xl"><span class="text-red-500 ml-2 font-bold">Rp 10.585.500.000.000.000</span></h1>
-            <a href="https://wa.me/0895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
+            <a href="https://wa.me/+62895337305533" class="text-center bg-green-500 text-slate-100 py-2 px-4 rounded-lg flex justify-center hover:bg-green-300" target="_blank">Buy via WA</a>
           </div>
         </div>
       </div>
@@ -179,7 +179,7 @@
 
     <!-- button wa start -->
     <div class="fixed bottom-5 right-1 z-40 bg-green-500 rounded-full flex hover:bg-green-300 md:right-48" style="width: 50px; height: 50px">
-      <a href="https://wa.me/0895337305533" target="_blank" class="m-auto">
+      <a href="https://wa.me/+62895337305533" target="_blank" class="m-auto">
         <img src="image/icon/wa.png" alt="wa" class="w-7" />
       </a>
     </div>
